The cards are now a flex container with column alignment, with a gap of 25vh, an height of 65vh, and a border just to style it correctly.

--- a/styles.css
+++ b/styles.css
@@ -385,3 +385,12 @@ header:hover {
     grid-template: 1fr / repeat(2, 1fr);
 }
 
+.meetus-cards-left,
+.meetus-cards-right {
+    display: flex;
+    flex-direction: column;
+    gap: 25vh;
+    height: 65vh;
+    border: 1px solid red;
+}
+
